<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    tools:context=".AddFoodActivity">


    <EditText
        android:id="@+id/edt_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_name"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edt_food_product"
        app:layout_constraintRight_toLeftOf="parent"
        android:background="@drawable/edit_backround"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/edt_food_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_food_name"
        app:layout_constraintBottom_toTopOf="@id/edt_preparation"
        android:hint="@string/kerakli_maxsulotlar"
        android:background="@drawable/edit_backround"
        android:padding="20dp"
        android:gravity="start"/>

    <EditText
        android:id="@+id/edt_preparation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        android:padding="20dp"
        android:textAlignment="textStart"
        android:background="@drawable/edit_backround"
        android:gravity="start"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/edt_food_product"
        android:hint="@string/taom_tayorlash_taetibi"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_preparation"
        tools:ignore="MissingConstraints"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintWidth_percent="0.35"
        android:text="@string/save"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"/>


</androidx.constraintlayout.widget.ConstraintLayout>